# swarm-http-api

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
Config/: build.cmake
Dependencies/: CMakeLists.txt
Sources/: CMakeLists.txt
Sources/swarm/http/mapping/: ProviderRegistry.cxx  ProviderRegistry.hxx
Sources/swarm/http/mapping/decoder/: DecoderProviderFactory.hxx  DefaultDecoderProviderFactory.hxx  DefaultDecoderProviderFactory.txx
Sources/swarm/http/mapping/encoder/: DefaultEncoderProviderFactory.hxx  DefaultEncoderProviderFactory.txx  EncoderProviderFactory.hxx
Sources/swarm/http/message/body/: HTTPBody.cxx  HTTPBody.hxx
Sources/swarm/http/message/commons/: HTTPParam.cxx  HTTPParam.hxx  HTTPVersion.cxx  HTTPVersion.hxx
Sources/swarm/http/message/header/: HTTPHeader.cxx  HTTPHeader.hxx  HTTPHeaders.cxx  HTTPHeaders.hxx
Sources/swarm/http/message/request/: HTTPMethod.cxx  HTTPMethod.hxx  HTTPRequest.cxx  HTTPRequest.hxx  HTTPRequestBuilder.cxx  HTTPRequestBuilder.hxx
Sources/swarm/http/message/response/: HTTPResponse.cxx  HTTPResponse.hxx  HTTPResponseBuilder.cxx  HTTPResponseBuilder.hxx  HTTPResponseBuilder.txx  HTTPResponseStatus.cxx  HTTPResponseStatus.hxx
Sources/swarm/http/stream/: HTTPStream.hxx  HTTPStringStream.cxx  HTTPStringStream.hxx
Sources/swarm/http/stream/input/: DefaultHTTPInputStream.cxx  DefaultHTTPInputStream.hxx  HTTPInputStream.hxx
Sources/swarm/http/stream/output/: DefaultHTTPOutputStream.cxx  DefaultHTTPOutputStream.hxx  HTTPOutputStream.hxx
Sources/swarm/http/tools/: CURLTools.cxx  CURLTools.hxx  URIEncoding.cxx  URIEncoding.hxx
Tests/: CMakeLists.txt
Tests/swarm/http/mapping/: ProviderTest.cxx
Tests/swarm/http/message/: HTTPRequestTest.cxx  HTTPResponseTest.cxx
travis/: buildenv.sh
